# customer_churn_alert_agent

./: .dockerignore  .gitignore  Dockerfile  PROJECT_GUIDE.md  README.md  check_causality.py  critic.py  drift.py  eval.py  explain.py  features.py  main.py  mark_contacted.py  pyproject.toml  quick_commerce_sim.py  report.py  scoring.py  test_churn.py  test_tools.py  train_model.py
.github/workflows/: ci.yml
churn/: archetype_eval.py  critic.py  drift.py  explain.py  main.py  mark_contacted.py  memory.py  pii.py  prompts.py  quick_commerce_sim.py  report.py  schemas.py  scoring.py  tools.py  train_model.py  uplift.py  utils.py  verifier.py
scripts/: explore_db.py
tests/: test_churn.py
