[project]
name = "customer-churn-alert-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.12",
    "langchain-google-genai>=4.3.1",
    "langchain-google-vertexai>=3.2.4",
    "langchain-groq>=1.1.3",
    "pandas>=3.0.5",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "shap>=0.52.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# run from the repo root so `import churn` resolves; tests live in tests/
pythonpath = ["."]
testpaths = ["tests"]
